--- a/404.html
+++ b/404.html
@@ -60,7 +60,7 @@
       />
     </a>
 
-    <a href="https://github.com/vavadikb?tab=repositories">
+    <a href="https://www.google.com">
       <img 
         src="https://imageio.forbes.com/specials-images/imageserve/671cd8a87359f0fc65720710/0x0.jpg?format=jpg&height=900&width=1600&fit=bounds"
         alt="I am not a robot"
