--- a/404.html
+++ b/404.html
@@ -22,30 +22,30 @@
 
     .container {
       background-color: #fff;
-      padding: 54px 36px; /* 1.5x */
-      border-radius: 18px; /* 1.5x */
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1); /* 1.5x */
-      max-width: 675px; /* 1.5x */
-      width: 95%;
+      padding: 27px 18px;
+      border-radius: 9px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      max-width: 340px;
+      width: 90%;
       text-align: center;
     }
 
     .container img {
       display: block;
-      margin: 36px auto; /* 1.5x */
+      margin: 18px auto;
     }
 
     .google-logo {
-      width: 450px; /* 1.5x of 300px */
+      width: 225px;
       max-width: 100%;
     }
 
     .recaptcha-img {
-      width: 495px; /* 1.5x of 330px */
+      width: 250px;
       max-width: 100%;
       border: 1px solid #ddd;
-      border-radius: 9px; /* 1.5x */
-      padding: 12px; /* 1.5x */
+      border-radius: 6px;
+      padding: 6px;
       background-color: #fafafa;
     }
   </style>
