--- a/404.html
+++ b/404.html
@@ -4,48 +4,55 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <base target="_top">
+  <title>Security Check</title>
   <style>
     * {
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       margin: 0;
       padding: 0;
-      background-color: #f3f6fc;
+      height: 100%;
+      overflow: hidden; /* Убирает скролл */
       font-family: Arial, sans-serif;
+      background-color: #f3f6fc;
+    }
+
+    body {
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
     }
 
     .container {
       background-color: #fff;
-      padding: 27px 18px;
-      border-radius: 9px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      max-width: 340px;
-      width: 90%;
+      padding: 54px 36px;
+      border-radius: 18px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+      max-width: 675px;
+      width: 95%;
       text-align: center;
     }
 
     .container img {
       display: block;
-      margin: 18px auto;
+      margin: 36px auto;
     }
 
     .google-logo {
-      width: 225px;
+      width: 450px;
       max-width: 100%;
+      height: auto;
     }
 
     .recaptcha-img {
-      width: 250px;
+      width: 495px;
       max-width: 100%;
+      height: auto;
       border: 1px solid #ddd;
-      border-radius: 6px;
-      padding: 6px;
+      border-radius: 9px;
+      padding: 12px;
       background-color: #fafafa;
     }
   </style>
