--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
       margin: 0;
       padding: 0;
       height: 100%;
-      overflow: hidden; /* Убирает скролл */
+      overflow: hidden;
       font-family: Arial, sans-serif;
       background-color: #f3f6fc;
     }
@@ -27,32 +27,30 @@
 
     .container {
       background-color: #fff;
-      padding: 54px 36px;
-      border-radius: 18px;
+      padding: 24px;
+      border-radius: 16px;
       box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
-      max-width: 675px;
-      width: 95%;
+      width: 100%;
+      max-width: 360px;
       text-align: center;
     }
 
     .container img {
+      max-width: 100%;
+      height: auto;
       display: block;
-      margin: 36px auto;
+      margin: 16px auto;
     }
 
     .google-logo {
-      width: 450px;
-      max-width: 100%;
-      height: auto;
+      max-width: 180px;
     }
 
     .recaptcha-img {
-      width: 495px;
-      max-width: 100%;
-      height: auto;
+      max-width: 300px;
       border: 1px solid #ddd;
-      border-radius: 9px;
-      padding: 12px;
+      border-radius: 8px;
+      padding: 8px;
       background-color: #fafafa;
     }
   </style>
